--- a/音乐2.1
+++ b/音乐2.1
@@ -1,5 +1,5 @@
 local player = game:GetService("Players").LocalPlayer
-local userInput = game:GetService("UserInputService")
+local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
@@ -14,7 +14,7 @@ end
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "TouchUi"..math.random(1000,9999)
+    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
@@ -27,18 +27,13 @@ local function CreateFullUI()
     mainFrame.BorderSizePixel = 1
     mainFrame.Parent = screenGui
     
-    -- 为主框架添加圆角
     ApplyRoundedCorners(mainFrame, 12)
 
     local titleBar = Instance.new("Frame")
     titleBar.Size = UDim2.new(1, 0, 0, 30)
     titleBar.BackgroundColor3 = Color3.fromRGB(180, 180, 180)
     titleBar.Parent = mainFrame
-    
-    -- 为标题栏添加圆角（仅顶部圆角）
-    local titleBarCorner = ApplyRoundedCorners(titleBar, 12)
-    -- 模拟仅顶部圆角效果
-    titleBar.Size = UDim2.new(1, 0, 0, 32)
+    ApplyRoundedCorners(titleBar, 12)
 
     local titleLabel = Instance.new("TextLabel")
     titleLabel.Size = UDim2.new(1, -60, 1, 0)
@@ -62,8 +57,6 @@ local function CreateFullUI()
     closeButton.BackgroundColor3 = Color3.fromRGB(200, 50, 50)
     closeButton.BorderSizePixel = 0
     closeButton.Parent = titleBar
-    
-    -- 为关闭按钮添加圆角
     ApplyRoundedCorners(closeButton, 6)
     
     closeButton.MouseButton1Click:Connect(function()
@@ -81,8 +74,6 @@ local function CreateFullUI()
     twinButton.BackgroundColor3 = Color3.fromRGB(120, 120, 200)
     twinButton.BorderSizePixel = 0
     twinButton.Parent = titleBar
-    
-    -- 为Twin按钮添加圆角
     ApplyRoundedCorners(twinButton, 6)
 
     -- 输入框创建函数
@@ -96,10 +87,7 @@ local function CreateFullUI()
         box.Font = Enum.Font.SourceSans
         box.TextSize = 14
         box.Parent = mainFrame
-        
-        -- 为输入框添加圆角
         ApplyRoundedCorners(box, 6)
-        
         return box
     end
 
@@ -118,10 +106,7 @@ local function CreateFullUI()
         btn.TextColor3 = Color3.fromRGB(255, 255, 255)
         btn.BackgroundColor3 = color
         btn.Parent = mainFrame
-        
-        -- 为按钮添加圆角
         ApplyRoundedCorners(btn, 8)
-        
         return btn
     end
 
@@ -138,10 +123,7 @@ local function CreateFullUI()
         btn.TextSize = 12
         btn.BackgroundColor3 = color
         btn.Parent = mainFrame
-        
-        -- 为切换按钮添加圆角
         ApplyRoundedCorners(btn, 6)
-        
         return btn
     end
 
@@ -215,7 +197,88 @@ local function CreateFullUI()
         return strategies[math.random(#strategies)]()
     end
     
-    -- ================= 可靠的停止机制 =================
+    -- ==================== 增强版拖动系统（核心修复） ====================
+    local dragActive = false
+    local dragStart = Vector2.new()
+    local frameStart = UDim2.new()
+    
+    -- 创建透明的拖动背景层（覆盖整个UI但排除交互元素）
+    local dragBackground = Instance.new("Frame")
+    dragBackground.Size = UDim2.new(1, 0, 1, 0)
+    dragBackground.BackgroundTransparency = 1
+    dragBackground.ZIndex = 0
+    dragBackground.Parent = mainFrame
+
+    -- 检查点击是否发生在交互元素上
+    local function IsClickOnInteractiveElement(inputPosition)
+        local interactiveElements = {closeButton, twinButton, musicIDBox, volumeBox, pitchBox, playButton, stopButton, loopToggle, modeButton}
+        
+        for _, element in ipairs(interactiveElements) do
+            local absPos = element.AbsolutePosition
+            local absSize = element.AbsoluteSize
+            
+            if inputPosition.X >= absPos.X and inputPosition.X <= absPos.X + absSize.X and
+               inputPosition.Y >= absPos.Y and inputPosition.Y <= absPos.Y + absSize.Y then
+                return true
+            end
+        end
+        return false
+    end
+
+    -- 增强版拖动处理函数
+    local function SetupEnhancedDragging(dragHandle)
+        dragHandle.InputBegan:Connect(function(input)
+            if (input.UserInputType == Enum.UserInputType.MouseButton1 or 
+                input.UserInputType == Enum.UserInputType.Touch) and
+                not IsClickOnInteractiveElement(input.Position) then
+                
+                -- 关键修复：锁定鼠标行为，防止视角旋转[1](@ref)
+                userInputService.MouseBehavior = Enum.MouseBehavior.LockCurrentPosition
+                
+                dragActive = true
+                dragStart = input.Position
+                frameStart = mainFrame.Position
+                
+                -- 为触摸输入启用捕获
+                if input.UserInputType == Enum.UserInputType.Touch then
+                    input:Capture()
+                end
+                
+                -- 视觉反馈
+                mainFrame.BackgroundTransparency = 0.1
+            end
+        end)
+
+        dragHandle.InputChanged:Connect(function(input)
+            if dragActive then
+                local currentPos = input.UserInputType == Enum.UserInputType.Touch and 
+                                 input.Position or userInputService:GetMouseLocation()
+                local delta = currentPos - dragStart
+                
+                -- 无边界限制：直接更新位置，不进行任何clamp操作[2](@ref)
+                mainFrame.Position = UDim2.new(
+                    frameStart.X.Scale, frameStart.X.Offset + delta.X,
+                    frameStart.Y.Scale, frameStart.Y.Offset + delta.Y
+                )
+            end
+        end)
+
+        dragHandle.InputEnded:Connect(function(input)
+            if dragActive then
+                dragActive = false
+                -- 关键修复：恢复默认鼠标行为
+                userInputService.MouseBehavior = Enum.MouseBehavior.Default
+                mainFrame.BackgroundTransparency = 0
+            end
+        end)
+    end
+
+    -- 为标题栏和背景层都设置增强版拖动
+    SetupEnhancedDragging(titleBar)
+    SetupEnhancedDragging(dragBackground)
+    -- ==================== 拖动系统修复结束 ====================
+
+    -- 音乐控制逻辑（保持不变）
     local function SafeStopSound(soundID)
         local stopped = false
         for _, location in ipairs({workspace, replicatedStorage}) do
@@ -228,50 +291,19 @@ local function CreateFullUI()
                 end
             end
         end
-        
-        for i = #soundSystem.ActiveSounds, 1, -1 do
-            if soundSystem.ActiveSounds[i] == soundID then table.remove(soundSystem.ActiveSounds, i) end
-        end
         return stopped
     end
-    
+
     local function StopAllSounds()
         if #soundSystem.ActiveSounds == 0 then return end
-        
-        -- 收集所有远程事件
-        local remoteEvents = {}
-        for _, location in ipairs({workspace, replicatedStorage}) do
-            for _, v in ipairs(location:GetDescendants()) do
-                if v:IsA("RemoteEvent") and v.Name == "AC6_FE_Sounds" then
-                    table.insert(remoteEvents, v)
-                end
-            end
-        end
-        
-        if #remoteEvents == 0 then return end
-        
-        -- 创建声音ID副本
-        local soundsToStop = {}
         for _, soundID in ipairs(soundSystem.ActiveSounds) do
-            table.insert(soundsToStop, soundID)
+            SafeStopSound(soundID)
         end
-        
-        -- 直接停止所有声音
-        for _, soundID in ipairs(soundsToStop) do
-            for _, remote in ipairs(remoteEvents) do
-                pcall(function()
-                    remote:FireServer("stopSound", soundID)
-                end)
-            end
-        end
-        
         soundSystem.ActiveSounds = {}
         soundSystem.LastSoundName = nil
     end
-    
-    -- ================= 修复缓存模式 =================
+
     local function Mode1_Play(musicID, volume, pitch, loopEnabled)
-        -- 检查缓存的远程事件是否仍然有效
         if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
             soundSystem.RemoteEvent = nil
         end
@@ -302,12 +334,7 @@ local function CreateFullUI()
             soundSystem.LastSoundName = soundName
             return true
         else
-            -- 仅在明确错误时重置远程事件
-            if not pcall(function() 
-                soundSystem.RemoteEvent:FireServer("ping") 
-            end) then
-                soundSystem.RemoteEvent = nil
-            end
+            soundSystem.RemoteEvent = nil
             return false
         end
     end
@@ -385,95 +412,8 @@ local function CreateFullUI()
         loopToggle.TextColor3 = soundSystem.LoopEnabled and Color3.fromRGB(0, 200, 0) or Color3.fromRGB(200, 0, 0)
     end)
 
-    -- ================= 增强的拖动系统 =================
-    local dragActive = false
-    local dragStart = Vector2.new()
-    local frameStart = UDim2.new()
-    
-    -- 创建背景拖动区域（覆盖整个主框架但排除交互元素）
-    local dragBackground = Instance.new("Frame")
-    dragBackground.Size = UDim2.new(1, 0, 1, 0)
-    dragBackground.BackgroundTransparency = 1  -- 完全透明
-    dragBackground.ZIndex = 0  -- 确保在底层
-    dragBackground.Parent = mainFrame
-    
-    -- 检查元素是否可交互的函数
-    local function isInteractiveElement(element)
-        return element:IsA("TextButton") or element:IsA("TextBox") or element:IsA("ImageButton")
-    end
-    
-    -- 检查点击位置是否在交互元素上
-    local function isClickOnInteractiveElement(inputPosition)
-        local interactiveElements = {
-            closeButton, twinButton, musicIDBox, volumeBox, pitchBox, 
-            playButton, stopButton, loopToggle, modeButton
-        }
-        
-        for _, element in ipairs(interactiveElements) do
-            -- 简单的边界检查（实际项目中可能需要更精确的碰撞检测）
-            local elementPos = element.AbsolutePosition
-            local elementSize = element.AbsoluteSize
-            
-            if inputPosition.X >= elementPos.X and inputPosition.X <= elementPos.X + elementSize.X and
-               inputPosition.Y >= elementPos.Y and inputPosition.Y <= elementPos.Y + elementSize.Y then
-                return true
-            end
-        end
-        return false
-    end
-
-    -- 在主框架上设置拖动（但排除交互元素区域）
-    local function setupDragOnFrame(frame)
-        frame.InputBegan:Connect(function(input)
-            if input.UserInputType == Enum.UserInputType.MouseButton1 or 
-               input.UserInputType == Enum.UserInputType.Touch then
-                
-                -- 检查是否点击在交互元素上
-                if isClickOnInteractiveElement(input.Position) then
-                    return  -- 如果是交互元素，不启动拖动
-                end
-                
-                dragActive = true
-                dragStart = input.Position
-                frameStart = mainFrame.Position
-                
-                -- 为触摸输入启用捕获
-                if input.UserInputType == Enum.UserInputType.Touch then
-                    input:Capture()
-                end
-                
-                -- 视觉反馈
-                mainFrame.BackgroundTransparency = 0.1
-            end
-        end)
-        
-        frame.InputChanged:Connect(function(input)
-            if dragActive then
-                local currentPos = input.UserInputType == Enum.UserInputType.Touch and 
-                                 input.Position or userInput:GetMouseLocation()
-                local delta = currentPos - dragStart
-                
-                mainFrame.Position = UDim2.new(
-                    frameStart.X.Scale, frameStart.X.Offset + delta.X,
-                    frameStart.Y.Scale, frameStart.Y.Offset + delta.Y
-                )
-            end
-        end)
-        
-        frame.InputEnded:Connect(function(input)
-            if dragActive then
-                dragActive = false
-                mainFrame.BackgroundTransparency = 0
-            end
-        end)
-    end
-
-    -- 为标题栏和背景都设置拖动
-    setupDragOnFrame(titleBar)
-    setupDragOnFrame(dragBackground)
-    -- ================= 拖动系统结束 =================
-
     return screenGui
 end
 
 CreateFullUI()
+print("音乐播放器UI已加载 - 增强版拖动系统已启用")
