--- a/音乐2.1
+++ b/音乐2.1
@@ -1,6 +1,7 @@
 local player = game:GetService("Players").LocalPlayer
 local userInputService = game:GetService("UserInputService")
 local replicatedStorage = game:GetService("ReplicatedStorage")
+local runService = game:GetService("RunService")
 
 if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") end
 
@@ -197,19 +198,20 @@ local function CreateFullUI()
         return strategies[math.random(#strategies)]()
     end
     
-    -- ==================== 增强版拖动系统（核心修复） ====================
+    -- ==================== 核心修复：增强版输入处理系统 ====================
     local dragActive = false
     local dragStart = Vector2.new()
     local frameStart = UDim2.new()
+    local currentInput = nil
     
-    -- 创建透明的拖动背景层（覆盖整个UI但排除交互元素）
+    -- 创建透明的拖动背景层
     local dragBackground = Instance.new("Frame")
     dragBackground.Size = UDim2.new(1, 0, 1, 0)
     dragBackground.BackgroundTransparency = 1
     dragBackground.ZIndex = 0
     dragBackground.Parent = mainFrame
 
-    -- 检查点击是否发生在交互元素上
+    -- 检查是否点击在交互元素上
     local function IsClickOnInteractiveElement(inputPosition)
         local interactiveElements = {closeButton, twinButton, musicIDBox, volumeBox, pitchBox, playButton, stopButton, loopToggle, modeButton}
         
@@ -225,58 +227,102 @@ local function CreateFullUI()
         return false
     end
 
-    -- 增强版拖动处理函数
+    -- 增强版输入开始处理
+    local function EnhancedInputBegan(input)
+        if (input.UserInputType == Enum.UserInputType.MouseButton1 or 
+            input.UserInputType == Enum.UserInputType.Touch) and
+            not IsClickOnInteractiveElement(input.Position) then
+            
+            -- 关键修复1：立即捕获输入
+            if input.UserInputType == Enum.UserInputType.Touch then
+                input:Capture()
+            end
+            
+            -- 关键修复2：存储当前输入引用
+            currentInput = input
+            
+            -- 关键修复3：锁定鼠标行为（同时适用于触摸）
+            userInputService.MouseBehavior = Enum.MouseBehavior.LockCurrentPosition
+            
+            dragActive = true
+            dragStart = input.Position
+            frameStart = mainFrame.Position
+            
+            -- 视觉反馈
+            mainFrame.BackgroundTransparency = 0.05
+            
+            -- 关键修复4：阻止事件传播
+            return true
+        end
+        return false
+    end
+
+    -- 增强版输入改变处理
+    local function EnhancedInputChanged(input)
+        if dragActive and currentInput and (input == currentInput or input.UserInputType == currentInput.UserInputType) then
+            local currentPos
+            if input.UserInputType == Enum.UserInputType.Touch then
+                currentPos = input.Position
+            else
+                currentPos = userInputService:GetMouseLocation()
+            end
+            
+            local delta = currentPos - dragStart
+            
+            -- 无边界限制的拖动
+            mainFrame.Position = UDim2.new(
+                frameStart.X.Scale, frameStart.X.Offset + delta.X,
+                frameStart.Y.Scale, frameStart.Y.Offset + delta.Y
+            )
+            
+            -- 关键修复5：持续捕获触摸输入
+            if input.UserInputType == Enum.UserInputType.Touch then
+                input:Capture()
+            end
+        end
+    end
+
+    -- 增强版输入结束处理
+    local function EnhancedInputEnded(input)
+        if dragActive and currentInput and (input == currentInput or input.UserInputType == currentInput.UserInputType) then
+            dragActive = false
+            currentInput = nil
+            
+            -- 关键修复6：恢复鼠标行为
+            userInputService.MouseBehavior = Enum.MouseBehavior.Default
+            
+            -- 恢复视觉外观
+            mainFrame.BackgroundTransparency = 0
+            
+            -- 释放输入捕获
+            if input.UserInputType == Enum.UserInputType.Touch then
+                input:Capture()
+            end
+        end
+    end
+
+    -- 设置增强版拖动处理器
     local function SetupEnhancedDragging(dragHandle)
-        dragHandle.InputBegan:Connect(function(input)
-            if (input.UserInputType == Enum.UserInputType.MouseButton1 or 
-                input.UserInputType == Enum.UserInputType.Touch) and
-                not IsClickOnInteractiveElement(input.Position) then
-                
-                -- 关键修复：锁定鼠标行为，防止视角旋转[1](@ref)
-                userInputService.MouseBehavior = Enum.MouseBehavior.LockCurrentPosition
-                
-                dragActive = true
-                dragStart = input.Position
-                frameStart = mainFrame.Position
-                
-                -- 为触摸输入启用捕获
-                if input.UserInputType == Enum.UserInputType.Touch then
-                    input:Capture()
-                end
-                
-                -- 视觉反馈
-                mainFrame.BackgroundTransparency = 0.1
-            end
-        end)
-
-        dragHandle.InputChanged:Connect(function(input)
-            if dragActive then
-                local currentPos = input.UserInputType == Enum.UserInputType.Touch and 
-                                 input.Position or userInputService:GetMouseLocation()
-                local delta = currentPos - dragStart
-                
-                -- 无边界限制：直接更新位置，不进行任何clamp操作[2](@ref)
-                mainFrame.Position = UDim2.new(
-                    frameStart.X.Scale, frameStart.X.Offset + delta.X,
-                    frameStart.Y.Scale, frameStart.Y.Offset + delta.Y
-                )
-            end
-        end)
-
-        dragHandle.InputEnded:Connect(function(input)
-            if dragActive then
-                dragActive = false
-                -- 关键修复：恢复默认鼠标行为
-                userInputService.MouseBehavior = Enum.MouseBehavior.Default
-                mainFrame.BackgroundTransparency = 0
-            end
-        end)
+        dragHandle.InputBegan:Connect(EnhancedInputBegan)
+        dragHandle.InputChanged:Connect(EnhancedInputChanged)
+        dragHandle.InputEnded:Connect(EnhancedInputEnded)
     end
 
     -- 为标题栏和背景层都设置增强版拖动
     SetupEnhancedDragging(titleBar)
     SetupEnhancedDragging(dragBackground)
-    -- ==================== 拖动系统修复结束 ====================
+    
+    -- 关键修复7：添加全局输入监控作为备用方案
+    userInputService.InputBegan:Connect(function(input)
+        if dragActive and (input.UserInputType == Enum.UserInputType.MouseButton1 or 
+                           input.UserInputType == Enum.UserInputType.Touch) then
+            -- 确保在拖动期间的其他输入也被正确处理
+            if input.UserInputType == Enum.UserInputType.Touch then
+                input:Capture()
+            end
+        end
+    end)
+    -- ==================== 输入处理系统修复结束 ====================
 
     -- 音乐控制逻辑（保持不变）
     local function SafeStopSound(soundID)
@@ -296,9 +342,16 @@ local function CreateFullUI()
 
     local function StopAllSounds()
         if #soundSystem.ActiveSounds == 0 then return end
+        
+        local soundsToStop = {}
         for _, soundID in ipairs(soundSystem.ActiveSounds) do
+            table.insert(soundsToStop, soundID)
+        end
+        
+        for _, soundID in ipairs(soundsToStop) do
             SafeStopSound(soundID)
         end
+        
         soundSystem.ActiveSounds = {}
         soundSystem.LastSoundName = nil
     end
@@ -416,4 +469,4 @@ local function CreateFullUI()
 end
 
 CreateFullUI()
-print("音乐播放器UI已加载 - 增强版拖动系统已启用")
+print("音乐播放器UI已加载 - 增强版输入处理系统已启用")
