--- a/音乐2.1
+++ b/音乐2.1
@@ -15,7 +15,7 @@ end
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "MusicPlayerUI_"..math.random(1000,9999)
+    screenGui.Name = "Rec_"..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
@@ -41,7 +41,7 @@ local function CreateFullUI()
     titleLabel.Position = UDim2.new(0, 5, 0, 0)
     titleLabel.Text = "MUSIC PLAYER ♪♪[made by余客]"
     titleLabel.TextColor3 = Color3.fromRGB(50, 50, 50)
-    titleLabel.TextSize = 18
+    titleLabel.TextSize = 15
     titleLabel.Font = Enum.Font.SourceSansBold
     titleLabel.TextXAlignment = Enum.TextXAlignment.Left
     titleLabel.BackgroundTransparency = 1
